# subway-congestion-analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/군집종합분석/: 지하철혼잡도_전처리완료_utf8.csv  지하철혼잡도정보_23년_utf8.csv  호선별_역_클러스터_결과_utf8.csv
data/행사_시위/: 행사_시위_승하차인원_상승분석.csv
db/: schema.sql
docs/: goal.md
docs/군집종합분석/: 클러스터_초간단_정리.md  호선별_클러스터_분석_종합리포트.md
docs/날씨/: README.md  WEATHER.md
docs/배차간격/: 1-역간_소요시간_분석_가이드.md  2-배차간격_분석_가이드.md  3-복합지표_분석_가이드.md  5-혼잡도_상관분석_가이드.md
docs/역세권건물/: 역세권건물_혼잡도_상관관계_분석보고서.md
docs/추정매출/: 추정매출_혼잡도_상관분석_결과.md
docs/행사/: README.md  서울_지하철_이벤트_혼잡도_분석_260114.ipynb  이벤트_전체_분석_가이드.ipynb
notebooks/건물/: 건물특성분석.ipynb  역세권건물_혼잡도_상관분석.ipynb
notebooks/군집종합분석/: chaos_23.ipynb
notebooks/날씨/: merged_weather_subway_data.csv  weather.ipynb  날씨 데이터 분석.ipynb
notebooks/배차간격/: 1-역간_소요시간_분석.ipynb  2-배차간격_분석.ipynb  3-복합지표_분석.ipynb  4-2_4_5호선_종합분석.ipynb  5-1-혼잡도_상관분석.ipynb  5-2-혼잡도_상관분석.ipynb
notebooks/인구/: 직장인구_혼잡도_상관분석.ipynb
notebooks/종합/: 혼잡도_종합_연관성_분석.ipynb
notebooks/혼잡도(군집)/: 지하철혼잡도_전처리완료.csv  지하철혼잡도정보_23년.csv  호선별_역_클러스터_결과.csv
